--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@heroicons/react": "1.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
