--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "dependencies": {
     "@headlessui/react": "1.3.0",
     "@heroicons/react": "1.0.2",
+    "axios": "^0.27.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
+    "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0",
     "typescript": "4.1.3"
   },
   "scripts": {
