--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "dependencies": {
     "@headlessui/react": "1.3.0",
     "@heroicons/react": "1.0.2",
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.0",
     "redux": "^4.2.0",
